# chumofei_

./: README.md
W1/: 01_function.cpp  02_map.cpp  03_class.cpp  CMakeLists.txt  greet.cpp
W2/: listener.cpp  talker-listener.launch.py  talker.cpp
W2/training_pkg/: CMakeLists.txt  package.xml
W2/training_pkg/config/: talker_params.yaml
W2/training_pkg/launch/: talker-listener.launch.py
W2/training_pkg/src/: freq_printer.cpp  talker.cpp
W3/: ArmorDetector.cpp  ArmorDetector.h  color_segmentation.cpp  single_image_detector.cpp  video_processor.cpp
W4/armor_detector/: CMakeLists.txt  package.xml
W4/armor_detector/config/: armor_params.yaml
W4/armor_detector/include/armor_detector/: ArmorDetector.h
W4/armor_detector/launch/: armor_detector.launch.py
W4/armor_detector/msg/: ArmorResult.msg
W4/armor_detector/src/: ArmorDetector.cpp  armor_detector_node.cpp  hik_camera_node.cpp
